--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Adhi Priharmanto"
+title                    : "Adhi Priharmanto | Just Stay at /var/lo"
 title_separator          : "-"
 name                     : "Adhi Priharmanto"
 description              : "Just Stay at /var/log"
