--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en_en"
+locale                   : "en"
 title                    : "Adhi Priharmanto | Just Stay at /var/log"
 title_separator          : "-"
 name                     : "Adhi Priharmanto"
